# OscilloscoPy

./: LICENSE  PyOscilloscope.py  README.md  README.rst  inf.py  infiniivision.py  osc.py  pyoscilloscope.py  pyproject.toml  setup.py
example/: infiniivision.py
src/oscilloscopy/: __init__.py  channel.py  generator.py  oscilloscope.py  oscilloscopy.py
tests/: test_channel.py  test_generator.py  test_oscilloscope.py
